--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 header
 {
-    background-color:#521;
+    background-color:#eee;
     height:100px;
-    width:1500px;
+    width:1112px;
+    float:right;
+    overflow:auto;
 }
 a
 {
@@ -11,29 +13,31 @@ a
 nav
 {
     height:20px;
-    width:1500px;
-    background-color:#743;
-    text-align:center;
+    width:200px;
+    background-color:#ddd;
     padding-top:4px;
 }
+div
+{
+    height:900px;
+    width:400px;
+    background-color:#ddd;
+    overflow:auto;
+    float:left;
+} 
 article
 {
     height:500px;
     width:740px;
-    background-color:#b87;
-    overflow:auto;
-}
-aside
-{
-    height:500px;
-    width:740px;
-    background-color:#da9;
+    background-color:#ddd;
     overflow:auto;
     float:right;
-} 
+}
 footer
 {
     background-color:#521;
     height:100px;
     width:1500;
 }
+
+
