--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header
 {
-    background-color:#eee;
+    background-color:#213;
     height:10%;
     width:85.5%;
     float:right;
@@ -8,20 +8,24 @@ header
 }
 a
 {
-    color:#000;
+    color:#BBAA77;
+    height:10%;
+    background-color:#335;
+    width:50%;
+    text-decoration:none;
 }
 nav
 {
-    height:20px;
-    width:200px;
-    background-color:#ddd;
-    padding-top:4px;
+    height:30%px;
+    width:95%;
+    background-color:#224;
+    margin-top:10%;
 }
 div
 {
     height:100%;
     width:14%;
-    background-color:#ddd;
+    background-color:#224;
     overflow:auto;
     float:left;
     padding-left:0.5%;
@@ -30,15 +34,19 @@ article
 {
     height:90%;
     width:85.5%;
-    background-color:#ccc;
+    background-color:#abb;
     margin-left:14.5%
 }
 footer
 {
-    background-color:#eee;
+    background-color:#213;
     height:10%;
     width:85.5%;
     margin-left:14.5%;
 }
-
+.navtxt
+{
+    color:#BBAA77;
+    font-size:95%;
+}
 
