--- a/style.css
+++ b/style.css
@@ -9,16 +9,22 @@ header
 a
 {
     color:#BBAA77;
-    height:10%;
+    height:20%;
     background-color:#335;
     width:50%;
     text-decoration:none;
+    font-size: 150%;
 }
 nav
 {
     height:30%px;
     width:95%;
     background-color:#224;
+    margin-top:10%;
+}
+#navimg
+{
+    width:15%;
     margin-top:10%;
 }
 div
