--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@ a
     width:50%;
     text-decoration:none;
     font-size: 150%;
+    border-radius:5px;
+}
+a:hover
+{
+    background-color:#557;
+    transition:0.5s;
+}
+a:active
+{
+    background-color:#557;
+    transition:0.5s;
 }
 nav
 {
@@ -26,6 +37,17 @@ nav
 {
     width:15%;
     margin-top:10%;
+}
+#hdrimg1
+{
+    float:right;
+    margin-top:1%;
+}
+#hdrimg2
+{
+    float:right;
+    margin-top:1%;
+    width:15%;
 }
 div
 {
