--- a/style.css
+++ b/style.css
@@ -60,10 +60,12 @@ div
 } 
 article
 {
-    height:90%;
-    width:85.5%;
+    height:89.3%;
+    width:85.15%;
     background-color:#abb;
-    margin-left:14.5%
+    margin-left:14.5%;
+    padding-left:5px;
+    padding-top:5px;
 }
 footer
 {
@@ -77,4 +79,14 @@ footer
     color:#BBAA77;
     font-size:95%;
 }
-
+.sbhdingtxt
+{
+    color:#221;
+    font-size:215%;
+    font-weight:bold;
+}
+.bodytxt
+{
+    color:#110;
+    font-size:125%;
+}
