--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ header
 }
 #a2
 {
-    color:#000
+    color:#000;
+    background-color:rgba(255, 255, 255, 0);
+    text-decoration:underline;
 }
 a
 {
